--- a/portfolio_update_v1/about.html
+++ b/portfolio_update_v1/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Joe Barnhard's Profile</title>
+  <title>Experience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -18,18 +18,18 @@
 
     <header>
       <img src="images/joePic.png" alt="pic of Joe B" class="profile-image">
-      <h1 class="tag name">Hello, I’m Joe.</h1>
-      <p class="tag location">I am from Tampa, Florida.</p>
+      <h1 class="tag name">It's me again!</h1>
+      <p class="tag location">Some of my experience</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
+        <h2>Experiences</h2>
         <p>I’m an aspiring web designer who is facinated about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional graphic designer, car salesman and humane wildlife relocator. I am a life-long learner who's always interested in expanding my skills.</p>
+        
       </div> 
 
-      <div class="card">
+      <!-- <div class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -43,7 +43,7 @@
         </ul>
 
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+      </div>  -->
 
     </main>
     <footer>
