--- a/portfolio_update_v1/about.html
+++ b/portfolio_update_v1/about.html
@@ -26,7 +26,7 @@
       <div class="about">
         <h2>About Me</h2>
         <p>I’m an aspiring web designer who is facinated about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         
       </div> 
@@ -50,9 +50,8 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/joe-barnhard-7716b8191/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/JoeBarnhard" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2249, Joe Barnhard</p>
     </footer>
