--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -50,11 +50,10 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/joe-barnhard-7716b8191/" target="_blank"class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/JoeBarnhard" target="_blank"class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2249, Joe Barnhard</p>
+      <p class="copyright">&copy; 2249, Joe Barnhard, Powered by Font Awesome</p>
     </footer>
   </body>
   </html>
