--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Joe Barnhard</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Me</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
       <img src="images/joePic.png" alt="pic of Joe B" class="profile-image">
@@ -31,7 +31,7 @@
         </p>
       </div> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
@@ -41,17 +41,17 @@
           <li>React</li>
           <li>Redux</li>
           <li>Java</li>
-          <li>& Python</li>
+          <li>Python</li>
         </ul>
 
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+      </section> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="https://www.linkedin.com/in/joe-barnhard-7716b8191/" target="_blank"class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/JoeBarnhard" target="_blank"class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/joe-barnhard-7716b8191/" target="_blank" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/JoeBarnhard" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">&copy; 2249, Joe Barnhard, Powered by Font Awesome</p>
     </footer>
