--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -23,13 +23,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who is facinated about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a professional graphic designer, car salesman and humane wildlife relocator. I am a life-long learner who's always interested in expanding my skills and start a long-term
         career in web devolpment.
         </p>
-      </div> 
+      </section> 
 
       <section class="card">
         <h2>Goals</h2>
