--- a/portfolio_update_v1/about.html
+++ b/portfolio_update_v1/about.html
@@ -13,6 +13,7 @@
           <li class="name">Joe Barnhard</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Me</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
       </nav>
 
@@ -45,7 +46,7 @@
         <li><a href="https://www.linkedin.com/in/joe-barnhard-7716b8191/" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/JoeBarnhard" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2249, Joe Barnhard</p>
+      <p class="copyright">&copy; 2046, Joe Barnhard</p>
     </footer>
   </body>
   </html>
